# substitution-ciphertext-decoder

./: README.md  analyze.ipynb  ciphertext_decoder.py  main.py  ngram_analyzer.py  pyproject.toml
ciphertext/: ciphertext3.txt
data/: 2-ngramFrequency.csv  3-ngramFrequency.csv  4-ngramFrequency.csv  analyze1000.csv
